# linpg

./: .gitignore  LICENSE  MANIFEST.in  README.md  README_SimplifiedChinese.md  README_TraditionalChinese.md  __init__.py  basic.py  builder.py  compiler.py  config.py  controller.py  font.py  module.py  mypy.ini  pyproject.toml  setup.cfg  setup.py  setup.yaml  tests.py
doc/: CN1_简介.md  CN2_入门.md  EN1_Introduction.md
lang/: English.json  English.yaml  SimplifiedChinese.json  SimplifiedChinese.yaml  TraditionalChinese.json
linpg/: __init__.py  abstracts.py  api.py  exception.py  info.json  interface.py
linpg/__pyinstaller/: __init__.py  hook-linpg.py  hook-pyi_hooksample.py
linpg/abstracts/: __init__.py  getter.py  hidable.py  setter.py
linpg/api/: __init__.py  basic.py  color.py  config.py  controller.py  coordinate.py  display.py  font.py  img.py  key.py  lang.py  load.py  mixer.py  module.py  pos.py  system.py  tool.py  transform.py  typing.py
linpg/asset/: __init__.py
linpg/basic/: __init__.py  color.py  configurations.py  controller.py  coordinate.py  coordinates.py  display.py  draw.py  files.py  font.py  getter.py  header.py  images.py  img.py  key.py  languages.py  mixer.py  saves.py  settings.py  specifications.py  surfaces.py  timer.py  version.py  videos.py  wrapper.py
linpg/battle/: __init__.py  astar.py  battle.py  character.py  component.py  decoration.py  editor.py  entity.py  entityModule.py  environment.py  icon.py  image.py  map.py  mapModule.py  sound.py  ui.py  weather.py
linpg/character/: __init__.py  character.py  entity.py  icon.py  image.py  module.py  sound.py
linpg/config/: __init__.py  base.py  data.py  database.json  debug.py  glob.py  info.json  info.py  manager.py  modules.py  setting.json  setting.py  specifications.json  template.json  ui.json  ui.py
linpg/core/: __init__.py  button.py  container.py  converter.py  coordinates.py  experimental.py  feature.py  font.py  frame.py  function.py  gif.py  image.py  inputbox.py  interface.py  module.py  progressbar.py  saves.py  shape.py  sprite.py  surface.py  system.py  text.py  tool.py  ui.py  video.py  window.py
linpg/dialog/: __init__.py  abstract.py  character.py  component.py  content.py  converter.py  dialog.py  dialogModule.py  dialogbox.py  editor.py  module.py  movie.py  render.py  script.py  ui.py  video.py
linpg/dialogue/: __init__.py  abstract.py  component.py  content.py  dialog.py  dialogue.py  editor.py  render.py  script.py
linpg/exception/: FileNotExists.py  FunctionIsNotImplemented.py  ToolIsMissing.py  __init__.py  error.py
linpg/experimental/: shadows.py
linpg/interface/: __init__.py  convert.py  load.py  transform.py
linpg/io/: configurations.py  files.py  languages.py  settings.py  specifications.py  variables.py
linpg/lang/: English.json  SimplifiedChinese.json  TraditionalChinese.json  __init__.py
linpg/language/: English.json  SimplifiedChinese.json  TraditionalChinese.json  __init__.py
linpg/lib/: ffmpeg.py
linpg/map/: __init__.py  abstract.py  astar.py  decoration.py  entity.py  image.py  map.py
linpg/media/: __init__.py  audio.py  controller.py  display.py  font.py  images.py  mixer.py  video.py  wrapper.py
linpg/reference/: __init__.py
linpg/surface/: __init__.py  module.py
linpg/tools/: __init__.py  abstract.py  builder.py  compiler.py  converter.py  fixer.py  organizer.py  zipper.py
linpg/ui/: __init__.py  button.py  combobox.py  console.py  container.py  converter.py  dropdown.py  generator.py  inputbox.py  menu.py  progressbar.py  scrollbar.py  scrollpane.py
scr_core/: basic.py  config.py  controller.py  experimental.py  font.py  function.py  inputbox.py  lang.py  module.py  surface.py  tool.py  ui.py
scr_py/: battle.py  character.py  characterDataManager.py  characterModule.py  dialog.py  dialogModule.py  doll.py  entity.py  entityModule.py  entity_ai.py  experimental.py  mapCreator.py
scr_pyx/: map.pyx  mapModule.pyx  movie.pyx
