[build-system]
requires = [
    "setuptools>=64",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "linpg"
version = "3.8.1"
authors = [
    {name = "Linpg Foundation", email = "yudong9912@gmail.com"},
]
description = "A game engine based on pygame, which aims to make game development easier."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: OS Independent",
]
dependencies = [
    "pygame-ce>=2.4.0",
    "pyvns>=2.1",
    "numpy",
    "opencv-python",
    "pillow",
    "PyYAML",
]

[project.urls]
"Homepage" = "https://github.com/LinpgFoundation/linpg"
"Bug Tracker" = "https://github.com/LinpgFoundation/linpg/issues"

[project.entry-points.pyinstaller40]
hook-dirs = "linpg.__pyinstaller:get_hook_dirs"

[tool.mypy]
python_version = "3.12"
# disallow_any_generics = true
disallow_untyped_defs = true
disallow_untyped_calls = true
warn_return_any = true
warn_redundant_casts = true
warn_unreachable = true

[tool.black]
line-length = 160
target-version = ['py312']

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*"]
