[metadata]
name = linpg
version = 3.4.0
author = Tigeia-Workshop
author_email = yudong9912@gmail.com
description = A game engine based on pygame, which aims to make game development easier.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Tigeia-Workshop/linpg
project_urls =
    Bug Tracker = https://github.com/Tigeia-Workshop/linpg/issues
classifiers =
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
packages = 
    linpg
package_dir =
    = src
python_requires = >=3.10
include_package_data=True
install_requires = 
    pygame
    numpy
    opencv-python
    pillow
    PySimpleGUI

[options.packages.find]
where = src

[options.entry_points]
pyinstaller40 =
    hook-dirs = linpg.__pyinstaller:get_hook_dirs